--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # compiled output
 /dist
-backend/node_modules
-frontend/node_modules
+/backend/node_modules/
+/frontend/node_modules/
 /build
 
 # Logs
